--- a/analyze/code/tables_and_figures.tex
+++ b/analyze/code/tables_and_figures.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 \usepackage{booktabs}
 \begin{document}
+\input{../tmp/table_1.tex}
 \input{../tmp/table_3.tex}
+\includegraphics[scale=1]{../tmp/figure_1.eps} 
 \end{document}
