Added package for graphics.

--- a/analyze/code/tables_and_figures.tex
+++ b/analyze/code/tables_and_figures.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{booktabs}
+\usepackage{graphicx}
 \begin{document}
 \input{../tmp/table_1.tex}
 \input{../tmp/table_3.tex}
