--- a/analyze/code/tables_and_figures.tex
+++ b/analyze/code/tables_and_figures.tex
@@ -4,5 +4,9 @@
 \begin{document}
 \input{../tmp/table_1.tex}
 \input{../tmp/table_3.tex}
-\includegraphics[scale=1]{../tmp/figure_1.eps} 
+\begin{figure}
+ \caption{\label{fig2}Use of line of credit versus cash holdings across cash-flow distribution}
+ \includegraphics[scale=1]{../tmp/figure_1.eps} 
+\end{figure}
+
 \end{document}
