Updates from Overleaf

--- a/analyze/code/tables_and_figures.tex
+++ b/analyze/code/tables_and_figures.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \begin{document}
 \input{../tmp/table_1.tex}
+\setcounter{table}{2}
 \input{../tmp/table_3.tex}
 \begin{figure}
  \caption{\label{fig2}Use of line of credit versus cash holdings across cash-flow distribution}
