Let the .tex code run by commenting out inclusion of table 3

--- a/analyze_part_2/code/tables_and_figures.tex
+++ b/analyze_part_2/code/tables_and_figures.tex
@@ -4,6 +4,6 @@
 \begin{document}
 \setcounter{table}{1}
 \input{../tmp/table_2.tex}
-\input{../tmp/table_3.tex}
+%\input{../tmp/table_3.tex}
 
 \end{document}
