Updates from Overleaf

--- a/analyze/code/tables_and_figures.tex
+++ b/analyze/code/tables_and_figures.tex
@@ -7,7 +7,7 @@
 \input{../tmp/table_3.tex}
 \begin{figure}
  \caption{\label{fig2}Use of line of credit versus cash holdings across cash-flow distribution}
- \includegraphics[scale=1]{../tmp/figure_1.eps} 
+ \includegraphics{../tmp/figure_1.eps} 
 \end{figure}
 
 \end{document}
